--- a/frontend/src/css/general.css
+++ b/frontend/src/css/general.css
@@ -30,6 +30,10 @@
     width:100%;
 }
 
+.w-100-vw{
+    width:100vw;
+}
+
 .h-100{
     height:100%;
 }
